# cmake-lib-boilerplate

./: CMakeLists.txt
include/: Calculator.h
source/: Calculator.cpp
